--- a/Android Source Code/NIKE/app/src/main/res/values/colors.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="nero">#141414</color>
+    <color name="eclipse">#383838</color>
+    <color name="dim_gray_1">#676767</color>
+    <color name="dim_gray_2">#747474</color>
+    <color name="nobel">#9C9C9C</color>
+    <color name="philippine_sliver">#B5B5B5</color>
+    <color name="whisper">#E5E5E5</color>
+    <color name="white_smoke">#F0F0F0</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFF500</color>
 </resources>
