[Android & RESTful Services] Add Home Design & API preparation, Adding get product by category and get all category function in RESTful service
Android:
- Create Home Fragment Design
- Add & Modify project structure (local & remote data source)
- Add API Preparation files
- Success to get men's all shoes data from service
- Show Category Chip
- Show & Hide Main Top Nav on scroll

RESTful Service:
- Add get all category function
- Add get product by category
- Change output format from JSON array to JSON object

Next:
- Add Category Chip Listener & logic
- Remove open-close string console in backend
- limit collection results
- show collection based on selected chip
- add show all button

--- a/Android Source Code/NIKE/app/src/main/res/layout/activity_main.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,45 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.82"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_nav_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".08"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/nike_logo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img_desc"
+            android:src="@drawable/logo_nike_white_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_setting"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:contentDescription="@string/img_desc"
+            android:src="@drawable/ic_baseline_settings_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
