--- a/Android Source Code/NIKE/app/src/main/res/values/themes.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/themes.xml
@@ -14,4 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="ThinnerChip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipCornerRadius">20dp</item>
+        <item name="chipMinHeight">10dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
