[Android] Add Missing Photos, Add Chip Listener & Logic, Show RecycleView By Selected Chip
Next:
- limit collection results
- get product by category & type
- add show all button

--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
@@ -131,16 +131,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top_banner_container" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/categories_chips_container"
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/categories_chips_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:singleLine="true"
+                app:singleSelection="true"
+                app:selectionRequired="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp" />
+
+        </HorizontalScrollView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_collections"
@@ -152,7 +162,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categories_chips_container"
+            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
             tools:listitem="@layout/item_row_product_rotate_xl" />
 
         <ProgressBar
