--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
@@ -533,6 +533,7 @@
                         app:layout_constraintWidth_percent=".5" />
 
                     <Button
+                        android:id="@+id/button_official_website"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
