--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_home.xml
@@ -131,6 +131,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top_banner_container" />
 
+        <Button
+            android:id="@+id/btn_see_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/see_all"
+            android:elevation="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_banner_container" />
+
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
