--- a/Android Source Code/NIKE/app/src/main/res/layout/item_grid_product_rotate_md.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/item_grid_product_rotate_md.xml
@@ -72,7 +72,7 @@
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/roboto_regular"
-        android:lines="1"
+        android:maxLines="1"
         android:text="@string/temp_category"
         android:textColor="@color/dim_gray_1"
         android:textSize="12sp"
