[Android] Update Android
Android:
- Show product in cart
- add logic in product cart button
- fixed the room queries for cart
- Fixed the bug in showing product size for women
- Fixed show favorite if the product id is same

Next:
- Add discount feature show in the UI
- Add Login-Sign In Feature
- Add check out logic and save data to transaction database
- Add transaction history using tab view (like shopee)

--- a/Android Source Code/NIKE/app/src/main/res/layout/item_row_shopping_cart.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/item_row_shopping_cart.xml
@@ -123,6 +123,7 @@
         app:layout_constraintWidth_percent=".3" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/rv_product_color"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="16dp"
