[Android & RESTful Services] Update Android & Backend Service
Android:
- Add discount feature show in the UI

RESTful Service:
- Add discount in our data result

Next:
- Fixed color chip bug's in detail page
- Add Login-Sign In Feature
- Add check out logic and save data to transaction database
- Add transaction history using tab view (like shopee)

--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -119,6 +119,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
         <Button
+            android:id="@+id/btn_checkout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
