--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_detail_product.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_detail_product.xml
@@ -142,7 +142,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/roboto_black"
+                    android:fontFamily="@font/roboto_regular"
                     android:text="@string/temp_price"
                     android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
